<resources>
    <string name="app_name">Notify On Location</string>
    <string name="action_settings">Settings</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="text_place_picker" />
    <string name="action_edit">Edit</string>
    <string name="action_contact">Contacts</string>
    <string name="app_title">NOL</string>
    <string name="content_text">You are on the way to the destination</string>
    <string name="contact_number" />
    <string name="notification_text_message">The rider is in the nearest location.</string>
    <string name="navigation_enabled">Your navigation is enabled.</string>
    <string name="navigation_disabled">Your navigation is disabled.</string>
    <string name="label_distance">Notify Distance (in mtrs)</string>
    <string name="label_text_message">Text message content</string>
    <string name="save_settings">Save</string>
    <string name="cancel_settings">Cancel</string>
    <string name="distance_config">distance</string>
    <string name="text_msg_config">textMsg</string>
    <string name="app_config">app_config_file</string>
</resources>
